# donkidunk

./: .gitattributes  .gitignore  .prettierignore  .releaserc.json  BUILDING.md  CHANGELOG.md  DEVELOPING.md  cortes.jsonc  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.js
.cargo/: config.toml
.github/workflows/: build.yaml  publish.yaml  release.yaml
building/: Dockerfile
src/: hooks.client.ts  vitest-setup-client.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: advanced_button_board.json  beginner_button_board.json  default_board_button.json
src-tauri/assets/keys/: public_key.pem
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/commands/: config.rs  database.rs  license.rs  menu.rs  metrics.rs  mod.rs  video.rs
src-tauri/src/lib/: auth.rs  configmanager.rs  deeplinks.rs  errors.rs  ffmpeg.rs  license.rs  menu.rs  metrics.rs  mod.rs  oauth.rs  scheduler.rs  securestore.rs  server.rs  state.rs  tasks.rs  timelinerepository.rs
src-tauri/src/lib/commands/: auth.rs  config.rs  database.rs  license.rs  menu.rs  metrics.rs  mod.rs  video.rs
src-tauri/src/lib/errors/: mod.rs
src-tauri/src/menu/: mod.rs
src-tauri/src/server/: mod.rs
src/adaptors/: SQLiteBoardRepository.ts  SQLiteDashboardRepository.ts  SQLiteProjectRepository.ts  SQLiteTimelineRepository.ts
src/adaptors/mappers/: ButtonMapper.ts  CategoryMapper.ts  CategoryUsageMapper.ts  EntryMapper.ts  EventUsageMapper.ts  TagMapper.ts  TagUsageMapper.ts
src/adaptors/types/: DatabaseButton.ts  DatabaseCategory.ts  DatabaseCategoryUsage.ts  DatabaseEntryWithTags.ts  DatabaseEventUsage.ts  DatabaseTag.ts  DatabaseTagUsage.ts
src/components/box/: box.svelte  category.svelte  colors.test.ts  colors.ts  form.svelte  types.ts  utils.ts
src/components/button/: button.svelte  types.ts
src/components/categoryplayer/: categoryplayer.svelte
src/components/checkbox/: checkbox.svelte  types.ts
src/components/clip/: clip.svelte
src/components/dropdown/: dropdown.svelte  types.ts
src/components/eventline/: eventline.svelte  types.ts
src/components/floatingmenu/: floatingmenu.svelte  types.ts
src/components/input/: input.svelte  types.ts
src/components/menu/: index.ts
src/components/modal/: modal.svelte
src/components/multiselect/: index.ts  multiselect.svelte  types.ts
src/components/snackbar/: snackbar.svelte
src/components/stroke/: stroke.svelte  types.ts
src/components/tag/: tag.svelte  types.ts
src/components/tagtime/: tagtime.svelte
src/components/toggle/: toggle.svelte  types.ts
src/components/tooltip/: tooltip.svelte
src/components/videoplayer/: controls.svelte  index.svelte  progressbar.svelte
src/events/: index.ts  project.ts  undomanager.ts  window.ts
src/events/types/: ExportEvent.ts  LicenseEvent.ts  LoginEvent.ts  ProjectEnablingState.ts  UndoEnablingState.ts
src/factories/: BoardRepositoryFactory.ts  DashboardRepositoryFactory.ts  ProjectRepositoryFactory.ts  TimelineRepositoryFactory.ts
src/lib/config/: licensePortalUrl.ts
src/lib/errors/: globalClientErrors.ts  subscriptionErrors.ts
src/modules/app/: EditorWorkspace.svelte  index.svelte
src/modules/blocker/: index.svelte
src/modules/board/: context.svelte.ts  index.svelte  validationSchema.ts
src/modules/config/: context.svelte.ts
src/modules/export/: context.svelte.ts  exportRuleFormOptions.ts  index.svelte  types.ts
src/modules/launch/: emptyProjectState.svelte
src/modules/license/: index.svelte
src/modules/login/: index.svelte
src/modules/menu/: index.ts
src/modules/metrics/: index.svelte
src/modules/modalContent/: addButtonsModal.svelte  addCategoryModal.svelte  addTagsModal.svelte  utils.ts
src/modules/navbar/: navbar.svelte
src/modules/videoplayer/: +data.ts  +types.ts  ARCHITECTURE_PROPOSAL.md  context.svelte.ts  controls.svelte  index.svelte  markers.svelte  progressbar.svelte  tagsbox.svelte  timeline.svelte  timelineZoom.ts  video.svelte
src/persistence/commands/: SetDatabaseConnection.ts
src/persistence/database/: actions.ts  index.svelte.ts  index.ts  migrations.ts  undomanager.ts
src/persistence/file/: index.svelte.ts  index.ts
src/ports/: BoardRepository.ts  DashboardRepository.ts  ProjectRepository.ts  TimelineRepository.ts
src/routes/: +layout.svelte  +page.svelte  page.svelte.test.ts
src/stores/: project.svelte.ts
src/stores/board/: actions.ts  (+2 more)
src/styles/: page.css
src/utils/: +constants.ts  messages.ts  options.ts
(+201 files in other folders)
