[package]
name = "donkidunk"
version = "0.0.0"
description = "A basket analysis app"
authors = ["CodigoDemente"]
edition = "2021"

[lib]
name = "lib"
path = "src/lib/mod.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "test"] }
tokio = { version = "1", features = ["rt", "fs", "macros", "process"] }
tokio-util = { version = "0", features = [ "io" ] }
axum  = { version = "0" }
anyhow = "1"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "8.0.0"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
log = "0.4"
tower-http = { version = "0.6.7", features = ["util", "fs"] }
tower = { version = "0.5.2" }
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
predicates = "3.1.3"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v7"] }
regex = "1.12.2"
axum-range = "1.0.0"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
futures = "0.3.31"
serde_repr = "0.1.20"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked"

[profile.ci]
inherits = "release"
opt-level = 2
lto = false 
