[package]
name = "donkidunk"
version = "0.0.0"
description = "A basket analysis app"
authors = ["CodigoDemente"]
edition = "2024"

[lib]
name = "dnkcore"
path = "src/lib/mod.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "test"] }
tokio = { version = "1", features = ["rt", "fs", "macros", "process"] }
tokio-util = { version = "0", features = [ "io" ] }
axum  = { version = "0" }
anyhow = "1"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
log = "0.4"
tower-http = { version = "0.6.8", features = ["util", "fs"] }
tower = { version = "0.5.2" }
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["v7"] }
regex = "1.12.2"
axum-range = "1.0.0"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
futures = "0.3.31"
serde_repr = "0.1.20"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "uuid", "time"] }
csv = "1.4.0"
chrono = "0.4.43"
rand = "0.10.0"
base64 = "0.22.1"
sha2 = "0.10.9"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }
tauri-plugin-http = { version = "2", features = ["json"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"] }
whoami = "2.1.1"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto", "use_pem"] }

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked"

[profile.ci]
inherits = "release"
opt-level = 2
lto = false 
